--- a/index.html
+++ b/index.html
@@ -3,18 +3,81 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" >
-	<title>How to set up React, Webpack, and Babel</title>
+	<style type = "text/css">
+		#bkg_img
+		{
+			display:block;
+			position:absolute;
+			top:0;
+			left:0;
+			z-index:-1;
+			background: url("https://s3.amazonaws.com/pindex908/IMG_0015.JPG");
+    		background-repeat: no-repeat;
+    		background-size: cover;
+			filter: blur(0px);
+			width:100%;
+			height:100%;
+		}
+
+		#tool_bar
+		{
+			display:block;
+			position:absolute;
+			margin:0 auto;
+			padding:0;
+			bottom:0;
+			left:0;
+			height:50px;
+			width:100%;
+			background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+			border:1px solid #ffcc00;
+		}
+		
+		.search_container
+		{
+			display:block;
+			margin:0 auto;
+			width:75%;
+			border:1px solid red;
+		}
+
+		.search_container form
+		{
+			display:flex;
+			border:1px solid yellow;
+			width:100%;
+		}
+		
+        .search_container form input#q
+        {
+			display:inline-block;
+			flex-grow: 1;
+			background-color: rgba(255, 255, 255, 0.5);
+        	border:1px solid #ccc;
+		}
+
+		.search_container form input#s
+        {
+			max-width:100px;
+			float:right;
+            display:inline-block;
+			background-color: rgba(255, 255, 255, 0.5);
+            border:1px solid #ccc;
+        }
+	</style>
+
+	<title>pindex - photo search</title>
 </head>
 <body>
-	<div class="container">
-		<div class="row mt-5">
-			<div class="col-md-4 offset-md-1">
-				<p>Create a new article</p>
-				<div id="create-search-form">
-					<!-- form -->
-				</div>
+	<div id="bkg_img"></div>
+	
+	<div id="tool_bar">
+		<div class="search_container">
+			<div id="create-search-form">
+				<!-- form -->
 			</div>
 		</div>
 	</div>
+
 </body>
 </html>
