--- a/index.html
+++ b/index.html
@@ -65,13 +65,39 @@
             border:1px solid #ccc;
         }
 
-		#photo_grid
-		{
-			border: 1px solid #ff0000;
-    		display: flex;
-    		flex-wrap: wrap;
-    		padding: 0 4px;
-		}
+	
+		
+		div#photo_grid {
+    width: 100%;
+    margin: 0 auto;
+}
+
+section.masonry
+{
+    margin: 0;
+    padding: 0;
+    column-count:5;
+    column-gap: 0;
+    font-size: 0em;
+}
+
+figure.grid-item
+{
+    display: inline-block;
+    width: 100%;
+    height:171px;
+    margin:0;
+}
+
+figure.grid-item img.photo
+{
+   
+    width:100%;
+    height:171px;
+    object-fit: cover;
+
+}
+
 	</style>
 
 	<title>pindex - photo search</title>
@@ -83,7 +109,7 @@
 	</div>	
 	<div id="tool_bar">
 		<div class="search_container">
-			<div id="create-search-form">
+			<div id="search_form">
 				<!-- form -->
 			</div>
 		</div>
