managing how redux is accessed with each network query to elastic search - limiting the display to show only the current query versus an infinite build of all photos

--- a/template.html
+++ b/template.html
@@ -3,7 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" >
+	<link rel="stylesheet" href="./lightbox/css/lightbox.css">
+
+	<script
+  src="https://code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous"></script>
 	
+	<script src="./lightbox/js/lightbox.js"></script>
+
 	<style type = "text/css">
 		
 		/*
@@ -215,11 +223,16 @@ figure.grid-item img.photo
 <div class="wrapper">
 	<section class="masonry">
 	
-		<figure class="grid-item">
+		<figure class="grid-item" >
+		<a href="https://s3.amazonaws.com/pindex908/IMG_0004.PNG" data-lightbox="roadtrip">
 		<img src="https://s3.amazonaws.com/pindex908/IMG_0004.PNG" class="photo">
+		</a>
 		</figure>
 		<figure class="grid-item">
+		        <a href="https://s3.amazonaws.com/pindex908/IMG_0012.JPG" data-lightbox="roadtrip">
+
 		<img src="https://s3.amazonaws.com/pindex908/IMG_0012.JPG" class="photo">
+		</a>
 		</figure>
 		<figure class="grid-item">
 		<img src="https://s3.amazonaws.com/pindex908/IMG_0015.JPG" class="photo">				
