--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" >
 	<style type = "text/css">
+/*
 		#bkg_img
 		{
 			display:block;
@@ -18,7 +19,7 @@
 			width:100%;
 			height:100%;
 		}
-
+*/
 		#tool_bar
 		{
 			display:block;
@@ -27,10 +28,9 @@
 			padding:0;
 			bottom:0;
 			left:0;
-			height:50px;
+			height:80px;
 			width:100%;
-			background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-			border:1px solid #ffcc00;
+			background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.85) 100%);
 		}
 		
 		.search_container
@@ -38,14 +38,13 @@
 			display:block;
 			margin:0 auto;
 			width:75%;
-			border:1px solid red;
 		}
 
 		.search_container form
 		{
 			display:flex;
-			border:1px solid yellow;
 			width:100%;
+			padding:20px 0 0 0;
 		}
 		
         .search_container form input#q
@@ -76,7 +75,7 @@ section.masonry
 {
     margin: 0;
     padding: 0;
-    column-count:5;
+    column-count:3;
     column-gap: 0;
     font-size: 0em;
 }
@@ -85,24 +84,93 @@ figure.grid-item
 {
     display: inline-block;
     width: 100%;
-    height:171px;
-    margin:0;
+   /*
+	 height:171px;
+    */
+	margin:0;
+	border:1px solid #fff;
 }
 
 figure.grid-item img.photo
 {
    
     width:100%;
-    height:171px;
-    object-fit: cover;
+	/* 
+   height:171px;
+    */
+	object-fit: cover;
 
 }
 
+	div#viewer
+	{
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		margin:0;
+		background-color: rgba(0,0,0,.85);
+		z-index:10;
+		display:none;
+	}
+
+	div#viewer img#focused_img
+	{
+		margin:auto;
+		display:block;
+		max-height:90%;
+		max-width:90%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+	}
+
+	div#viewer span#close_viewer
+	{
+		color:white;
+		display:block;
+		border:1px solid #fff;
+		position:absolute;
+		top:10px;
+		right:10px;
+		width:20px;
+		height:20px;
+		text-align:center;
+	}
 	</style>
+
+	<script>
+		document.addEventListener('click', function (event) {
+			if (!event.target.matches('.photo')) return;
+			event.preventDefault();
+			console.log(event.target.src);
+			document.getElementById("viewer").style.display = "block";
+			document.getElementById("focused_img").src = event.target.src;
+		}, false);
+		
+		window.addEventListener("load", function()
+		{	
+			document.getElementById("close_viewer").onclick = function()
+			{
+				document.getElementById("viewer").style.display = "none";
+			}
+		});
+	</script>
+
+
 
 	<title>pindex - photo search</title>
 </head>
 <body>
+	
+	<div id="viewer">
+		<span id="close_viewer">X</span>
+		<img src="https://s3.amazonaws.com/pindex908/IMG_0004.PNG" id="focused_img" />
+	</div>
+
 	<div id="bkg_img"></div>
 	<div id="photo_grid">
 
